feat: Add endpoint to edit part of a note
